--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
     <tr>
         <td><a href=".">Home</a></td>
         <td><a href="about">About</a></td>
+        <td><a href="timebox">Timebox</a></td>
     </tr>
 </table>
 <hr>
