--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <table>
     <tr>
+        <td><img src="https://github.com/sonakshibhalla/tri2_turtles.github.io/blob/main/static/assets/shreyaimages/logoimage.png?raw=true" height="60" alt=""> </td>
         <td><a href=".">Home</a></td>
         <td><a href="about">About</a></td>
         <td><a href="timebox">Timebox</a></td>
