API and updates

--- a/templates/keyFeatures/stress.html
+++ b/templates/keyFeatures/stress.html
@@ -3,7 +3,7 @@
 <script>     <!-- Code from Punnu -->
     function changeVisible(id) {
 
-        var element = document.getElementById(id);
+        const element = document.getElementById(id);
 
         if (element.style.display == "none") {
             element.style.display = "initial"
