--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -86,7 +86,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <a class="dropdown-item" href="{{ url_for('shreya') }}">Shreya</a>
                     <a class="dropdown-item" href="{{ url_for('sonakshi') }}">Sonakshi</a>
-                    <a class="dropdown-item" href="{{ url_for('linda') }}">Punnu</a>
+                    <a class="dropdown-item" href="{{ url_for('punnu') }}">Punnu</a>
                     <a class="dropdown-item" href="{{ url_for('khushi') }}">Khushi</a>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('study') }}">Study Resources</a></li>
