small refactors added PBLCreateTask.html for a repl embed (PBL)

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -115,6 +115,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item"><a class="nav-link" href="{{ url_for('journal') }}">Journal</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('fibonacci') }}">Fibonacci</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('mathapi') }}">Mathapi</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('PBLCreateTask') }}">Punnu's CreateTask PBL</a></li>
         </ul>
     </div>
         </ul>
