--- a/templates/createtask.html
+++ b/templates/createtask.html
@@ -10,6 +10,7 @@
 <body>
 
 <h1>Mad Libs</h1>
+<p>Enter three objects to create a story</p>
 
 <ul>
     <li>Object 1: <input type="text" id="ob1"></li>
@@ -29,6 +30,7 @@
 
     while (n < 1) {
         n++;
+
         var Button = document.getElementById('button');
 
         function madLibs(ob1, ob2, ob3) {
