--- a/templates/api/Used/mathapi.html
+++ b/templates/api/Used/mathapi.html
@@ -38,6 +38,6 @@
     </div>
     <br>
     <p style="color:purple; text-after-overflow: center; font-size:40px">Try out this Math Quiz on Mean, Median, and Mode!</p>
-    <a style="font-size: large; font-family: Baskerville;text-align: center" href="C:\Users\khush\IdeaProjects\tri2_turtles.github.io\Punnu and Khushi Create Task\createtask.py">Click here!</a>
+    <a style="font-size: large; font-family: Baskerville;text-align: center" href="http://127.0.0.1:5001/PBLCreateTask/">Click here!</a>
 </div>
 {% endblock %}
