--- a/templates/crossTeam/gigiChat.html
+++ b/templates/crossTeam/gigiChat.html
@@ -14,7 +14,7 @@
 
         'use strict' //ensures best environment to prevent JS programmer error and tells browser to use most modern version of JS interpreter it has.
 
-        document.addEventListener("DOMContentLoaded", function(){
+        document.addEventListener("DOMContentLoaded", function(){ljk},{
             // event listener fires when the DOM is fully loaded. This way you can write scripts that are before the elements are loaded into the dom, but waits to be added to the page until the dom is fully loaded.
 
             //querySelector selects elements with CSS selectors. id="create" gets selected with the code above.
@@ -33,7 +33,7 @@
             //prevents submission of form when password length is not valid.
         }
 
-        } //this function could be expanded upon, where we use JS to completely validate the form and have HTML5 as a fallback. Let me know if you want to have me expand this. - T
+        ,{ //this function could be expanded upon, where we use JS to completely validate the form and have HTML5 as a fallback. Let me know if you want to have me expand this. - T
 
         //additional listeners and functions could/should be put in here.
 
