--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,10 @@
 <table>
     <tr>
-        <td><img src="https://github.com/sonakshibhalla/tri2_turtles.github.io/blob/main/static/assets/shreyaimages/logoimage.png?raw=true" height="100" width="100"  alt=""> </td>
         <td><a href=".">Home</a></td>
-        <td><a href="about">About</a></td>
-        <td><a href="timebox">Timebox</a></td>
+        <td><a href="notes">TPT Notes</a></td>
+        <td><a href="questions">TPT Questions</a></td>
+        <td><a href="create">Create Task Plan</a></td>
+        <td><a href="python">Python Project</a></td>
     </tr>
 </table>
 <hr>
