--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,7 @@
         <td><a href="questions">TPT Questions</a></td>
         <td><a href="create">Create Task Plan</a></td>
         <td><a href="python">Python Project</a></td>
+        <td><a href="licenseInfo">License Information</a></td>
     </tr>
 </table>
 <hr>
