--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,6 +6,7 @@
         <td><a href="create">Create Task Plan</a></td>
         <td><a href="python">Python Project</a></td>
         <td><a href="licenseInfo">License Information</a></td>
+        <td><a href="apexam">Study Plan and Corrections</a></td>
     </tr>
 </table>
 <hr>
